added videos + basic design

--- a/index.html
+++ b/index.html
@@ -1,14 +1,50 @@
 <meta charset="UTF-8">
 <html>
 <head>
-
 	<title>Jam with Jamendo</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" >
+	<style>
+	body{
+		font-family: 'Roboto', sans-serif;
+		background: url(img/QbC_bg_alpha.png) no-repeat bottom right;
+    background-color: rgba(255, 255, 255, 0.3);
+		width: 800px;
+		display: block;
+		margin: 0 auto;
+		text-align:justify
+	}
+	iframe{
+		display: block;
+		margin: 0 auto;
+	}
+	</style>
 </head>
 <body>
 
 <main>
 
-	<p>This is the webpage of Jam with Jamendo</p>
+	<h1>Jam with Jamendo</h1>
+
+	<p>Welcome to the webpage of the prototype Jam with Jamendo, a web-based proof-of-concept prototype that promotes the practice of known chords with suitable songs from the <a href="https://www.jamendo.com/">Jamendo</a> online database.<p>
+	<p>See below two video demos related to two conference publications and a live demo.</p>
+
+	<h2>JwJ demo Audio Mostly 2018</h2>
+
+	<p>This demo showcases the version of the web app Jam with Jamendo that we used in the paper:<br />
+		Anna Xambó, Johan Pauwels, Gerard Roma, Mathieu Barthet, and György Fazekas. 2018. "Jam with Jamendo: Querying a Large Music Collection by Chords from a Learner’s Perspective". In Audio Mostly 2018: Sound in Immersion and Emotion (AM’18), September 12–14, 2018, Wrexham, United Kingdom. ACM, New York, NY, USA, 7 pages.</p>
+
+	<iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2152241/sp/215224100/embedIframeJs/uiconf_id/36133491/partner_id/2152241?iframeembed=true&playerId=kaltura_player&entry_id=1_k35qnj91&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;&wid=1_1ldzyzt0" width="600" height="428" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0" title="Kaltura Player"></iframe>
+
+	<h2>JwJ demo Web Audio Conference 2018</h2>
+
+	<p>This demo showcases the version of the web app Jam with Jamendo that we used in the paper: <br />
+		Johan Pauwels, Anna Xambó, Gerard Roma, Mathieu Barthet, and György Fazekas. 2018. "Exploring Real-time Visualisations to Support Chord Learning with a Large Music Collection". In Web Audio Conference, September 19–21, 2018, Berlin, Germany.</p>
+
+	<iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2152241/sp/215224100/embedIframeJs/uiconf_id/36133491/partner_id/2152241?iframeembed=true&playerId=kaltura_player&entry_id=1_39fas94d&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;&wid=1_hpnkkf0a" width="600" height="428" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0" title="Kaltura Player"></iframe>
+
+	<h2>Live Demo</h2>
+
+	<p>Coming soon...</p>
 
 </main>
 
