--- a/index.html
+++ b/index.html
@@ -10,13 +10,31 @@
     background-color: rgba(255, 255, 255, 0.3);
 		width: 800px;
 		display: block;
-		margin: 0 auto;
+		margin: 2em auto 0 ;
 		text-align:justify
 	}
 	iframe{
 		display: block;
 		margin: 0 auto;
 	}
+	p.note
+{
+     -moz-border-radius: 6px;
+     -webkit-border-radius: 6px;
+     background-color: #f0f7fb;
+     background-position: 9px 0px;
+     background-repeat: no-repeat;
+     border: solid 1px #3498db;
+     border-radius: 6px;
+     line-height: 18px;
+     overflow: hidden;
+     padding: 15px 60px;
+}
+a {
+	color: orange;
+	text-decoration: none;
+}
+
 	</style>
 </head>
 <body>
@@ -30,8 +48,11 @@
 
 	<h2>JwJ demo Audio Mostly 2018</h2>
 
+	<p class="note"><a href="qbc-viz.html"><strong>Live demo</strong>: JwJ demo for Web Audio Conference 2018 (with two visualizations!)</a></note>
+
 	<p>This demo showcases the version of the web app Jam with Jamendo that we used in the paper:<br />
 		Anna Xambó, Johan Pauwels, Gerard Roma, Mathieu Barthet, and György Fazekas. 2018. "Jam with Jamendo: Querying a Large Music Collection by Chords from a Learner’s Perspective". In Audio Mostly 2018: Sound in Immersion and Emotion (AM’18), September 12–14, 2018, Wrexham, United Kingdom. ACM, New York, NY, USA, 7 pages.</p>
+
 
 	<iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2152241/sp/215224100/embedIframeJs/uiconf_id/36133491/partner_id/2152241?iframeembed=true&playerId=kaltura_player&entry_id=1_k35qnj91&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;&wid=1_1ldzyzt0" width="600" height="428" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0" title="Kaltura Player"></iframe>
 
@@ -42,9 +63,6 @@
 
 	<iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2152241/sp/215224100/embedIframeJs/uiconf_id/36133491/partner_id/2152241?iframeembed=true&playerId=kaltura_player&entry_id=1_39fas94d&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;&wid=1_hpnkkf0a" width="600" height="428" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0" title="Kaltura Player"></iframe>
 
-	<h2>Live Demo</h2>
-
-	<p>Coming soon...</p>
 
 </main>
 
