workaround link http live demo

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@ a {
 	text-decoration: none;
 }
 
+h1, h2, h3 {
+	margin: 2em 0 2em ;
+}
+
 	</style>
 </head>
 <body>
@@ -44,7 +48,7 @@ a {
 	<h1>Jam with Jamendo</h1>
 
 	<p>Welcome to the webpage of the prototype Jam with Jamendo, a web-based proof-of-concept prototype that promotes the practice of known chords with suitable songs from the <a href="https://www.jamendo.com/">Jamendo</a> online database.<p>
-	<p>See below two video demos related to two conference publications and a live demo.</p>
+	<p>See below two video demos related to two conference publications and a <a href="http://audiocommons.org/jam/qbc-viz.html">live demo</a>.</p>
 
 	<h2>JwJ demo Audio Mostly 2018</h2>
 
@@ -57,7 +61,7 @@ a {
 
 	<h2>JwJ demo Web Audio Conference 2018</h2>
 
-	<p class="note"><a href="qbc-viz.html"><strong>Live demo</strong>: JwJ demo for Web Audio Conference 2018 (with two visualizations!)</a></note>
+	<p class="note"><a href="http://audiocommons.org/jam/qbc-viz.html"><strong>Live demo</strong>: JwJ demo for Web Audio Conference 2018 (with two visualizations!)</a></note>
 
 	<p>This demo showcases the version of the web app Jam with Jamendo that we used in the paper: <br />
 		Johan Pauwels, Anna Xambó, Gerard Roma, Mathieu Barthet, and György Fazekas. 2018. "Exploring Real-time Visualisations to Support Chord Learning with a Large Music Collection". In Web Audio Conference, September 19–21, 2018, Berlin, Germany.</p>
