--- a/qbc-viz.html
+++ b/qbc-viz.html
@@ -10,8 +10,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- here any additional <meta> tags -->
+  
+  <!-- Force HTTP to avoid mixed protocol errors with API -->
   <title>Prototype Jam with Jamendo</title>
-
+  <script>
+      if (window.location.host.substr(-10) == '.github.io' && window.location.protocol == "https:"){
+          window.location.protocol = "http";
+      }
+  </script>
+  
   <!-- jQuery CDN -->
   <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"></script>
   <!-- jQuery local fallback -->
