Make HTTP redirect work from any domain

--- a/qbc-viz.html
+++ b/qbc-viz.html
@@ -14,7 +14,7 @@
   <!-- Force HTTP to avoid mixed protocol errors with API -->
   <title>Prototype Jam with Jamendo</title>
   <script>
-      if (window.location.host.substr(-10) == '.github.io' && window.location.protocol == "https:"){
+      if (window.location.protocol == "https:"){
           window.location.protocol = "http";
       }
   </script>
